tests/types/errors/assign_type_mismatch.mochi
var x: int = 1
x = "hi"
