tests/types/errors/assign_type_mismatch.err
1. error[T008]: type mismatch: expected int, got string
  --> tests/types/errors/assign_type_mismatch.mochi:2:5

  2 | x = "hi"
    |     ^

help:
  Change the value to match the expected type.
